# bitewise

./: .gitignore  LICENSE  README.md  bitewise.ipynb  pyproject.toml
notebooks/: BiteWise_App_Demo.ipynb  BiteWise_Capstone_Workbook.ipynb  bitewise_demo.ipynb
src/bitewise/: app.py  cli.py  prompts.py  recipes.py  schemas.py  vision.py
tests/: test_recipes_guard.py
