[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license = { file = "LICENSE" } 
name = "bitewise"
version = "0.1.0"
description = "Waste- and constraint-aware recipe suggester."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shima R.", email = "example@example.com" }]
dependencies = [
  "google-generativeai>=0.7.2",
  "python-dotenv>=1.0.1",
  "pillow>=10.3.0"
]

classifiers = [
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "ipywidgets>=8.1"
]

[project.scripts]
bitewise = "bitewise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
